--- a/fronthand/package.json
+++ b/fronthand/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-fs": "^2.20.0",
-    "react-router-dom": "^6.19.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
