--- a/fronthand/package.json
+++ b/fronthand/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.2",
     "fs": "0.0.1-security",
     "gsap": "^3.12.2",
+    "js-cookie": "^3.0.5",
     "openai": "^4.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
