--- a/fronthand/package.json
+++ b/fronthand/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/x-data-grid": "^7.0.0",
     "@preact/signals-react": "^1.3.8",
     "@tensorflow/tfjs-core": "^4.12.0",
     "@testing-library/jest-dom": "^5.17.0",
