appointment Table made

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ build/
 
 # Ignore log files
 *.log
-
+*.module_name
+.module_name
 # Ignore npm-specific files
-package-lock.json
+package-lock.json   
