--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@mui/x-data-grid": "^7.0.0",
     "@nestjs/config": "^3.1.1"
   }
 }
